# birdhash

./: .gitignore  COLLIDER.md  Cargo.toml  README.md  SPEC.md  build.rs  config  config.toml  findings.md  progress.md  task_plan.md
assets/: generator_seed.key
assets/derivation_candidates/: derivation_candidates.txt
gpu-kernel/: Cargo.toml  lib.s
gpu-kernel/src/: lib.rs
scripts/: collide-mac.sh  collide-windows.bat  init-mac.sh  init-windows.bat
src/: archive.rs  collider.rs  config.rs  cursor.rs  derivation.rs  fetcher.rs  filter.rs  generator.rs  gpu_collider.rs  keygen.rs  lifecycle.rs  main.rs  scanner.rs  stats.rs
tools/: Cargo.toml
tools/src/: main.rs
