[package]
name = "birdhash"
version = "0.1.0"
edition = "2021"
description = "Ethereum address collision detector with 3-tier storage (L1 BinaryFuse8 / L2 Bloom / L3 distributed scan)"
license = "MIT"

[workspace]
members = [".", "tools"]
resolver = "2"

[dependencies]
secp256k1 = { version = "0.29", features = ["rand-std"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
hmac = "0.12"
sha2 = "0.10"
xorf = { version = "0.11", features = ["serde"] }
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
bincode = "1"
ureq = { version = "2", features = ["json"] }
toml = "0.8"
rlp = "0.5"
indicatif = "0.17"
bip32 = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
